<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Formulario">

    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="345dp"
        android:layout_height="53dp"

        android:autofillHints=""
        android:background="@drawable/border_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginBottom="35dp"
        tools:ignore="DuplicateClickableBoundsCheck,MissingConstraints,TextContrastCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="168dp" />

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/senha"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginBottom="35dp"
        tools:ignore="DuplicateClickableBoundsCheck,MissingConstraints,TextContrastCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="238dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginBottom="35dp"
        tools:ignore="MissingConstraints,TextContrastCheck,TextFields,VisualLintTextFieldSize,DuplicateClickableBoundsCheck"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="304dp" />

    <EditText
        android:id="@+id/edt_tel"
        android:layout_width="345dp"
        android:layout_height="53dp"
        android:autofillHints=""
        android:background="@drawable/border_text"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/telefone"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:layout_marginBottom="35dp"
        tools:ignore="MissingConstraints,TextContrastCheck,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="33dp"
        tools:layout_editor_absoluteY="372dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_prox"
        android:layout_width="300dp"
        android:layout_height="72dp"
        android:background="@drawable/button_prox"
        android:text="@string/proximo"
        android:textColor="@color/color_prox_text"

        android:textSize="20sp"
        tools:ignore="MissingConstraints,TextContrastCheck,VisualLintButtonSize"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="475dp" />


</LinearLayout>